# AkademeMateQt

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  StudyTimer.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
data/: CreateTables.sql  Module.db  modules-export-new-with-header.csv  modules-export-new.csv  modules-export-with-header.csv  modules-export.csv
src/: AkademeMate.cpp  Calculations.cpp  Calculations.h  ColorDelegate.cpp  ColorDelegate.h  CreateTables.sql  DbInputWindow.cpp  DbInputWindow.h  DbInputWindow.ui  DbManager.cpp  DbManager.h  Db_Input_Window.cpp  Db_Input_Window.h  Db_Input_Window.ui  Module.cpp  Module.h  StudyTimer.cpp  StudyTimer.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  sqlite_helper.cpp  sqlite_helper.h  sqlite_result.cpp  sqlite_result.h
src/sqlimport/: CMakeLists.txt  sqlimport.cpp
